--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2" >
 	<id >com.yourcompany.unique.plugin.id</id >
 	<name >Smeet Logger</name >
-	<version >0.1</version >
+	<version >0.5</version >
 	<vendor email="support@smeet.com"
 	        url="http://www.smeet.com" >YourCompany
 	</vendor >
@@ -13,6 +13,7 @@
 
 	<change-notes ><![CDATA[
 			0.1 First alpha version
+			0.5 First beta version
       ]]>
 	</change-notes >
 
